# graphicsbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_linux.sh  build_linux_wasm.sh  build_wasm_clang.bat  build_win.bat  clean_up.bat  common_compile_files.txt  debug_win.bat  run_wasm.bat  setupwasm.bat  setupwasm.sh
cmake/: setup_ispc.cmake  setup_ninja.cmake  utils.cmake
config/msvc/: build_debug.txt  build_release.txt  link_debug.txt  link_release.txt
libs/: CMakeLists.txt
libs/glad/include/glad/: egl.h  gl.h  gles1.h  gles2.h  glx.h  wgl.h
libs/glad/src/: egl.c  gl.c  gles1.c  gles2.c
libs/glad_config/: CMakeLists.txt
libs/imgui_config/: CMakeLists.txt
libs/stb_config/: CMakeLists.txt
prj/windows/: graphicbox.sln
scripts/: download_prj_tools.bat  export_common_compile_file.bat  format_code.bat  setup_win_env.bat
sources/: CMakeLists.txt  base.h  common.h  config.h  linux_main.cpp  platforms.h  win_main.cpp
sources/Core/: Apllication_Win_Impl.cpp  Application.h
sources/Entry/: Application.h
sources/Entry/Wasm/: wasm_main.cpp
sources/Entry/Windows/: Apllication_Win_Impl.cpp  Application_Win_Impl.h  win_main.cpp
sources/Graphics/Renderer/: Renderer.cpp  Renderer.h
sources/Graphics/Renderer/DirectX/: D3D11_Renderer.cpp  D3D11_Renderer.h  D3D11_Renderer_Imp.cpp  D3D11_Renderer_Imp.h
sources/Graphics/Renderer/Null/: Null_Renderer.cpp  Null_Renderer.h
sources/Graphics/Renderer/OpenGL/: OpenGL_Renderer.cpp  OpenGL_Renderer.h
sources/Graphics/Renderer/Software/: Software_Renderer.cpp  Software_Renderer.h
sources/Render/: Renderer.h
sources/Render/DirectX/: D3D11_Renderer.cpp  D3D11_Renderer.h
sources/application/: CMakeLists.txt
sources/application/entry/windows/: main.cpp
sources/core/: CMakeLists.txt
sources/cpp/entry/win32/: main.cpp
sources/entry/linux/: main.cpp
sources/entry/wasm/: main.cpp
sources/entry/wasm/html/: shell.html
sources/entry/win32/: main.cpp
sources/entry/windows/: main.cpp
tests/: CMakeLists.txt  main.cpp
